# sir-bot-a-lot-2

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  environment.yml  index.rst
docs/api/: apscheduler.rst  github.rst  index.rst  postgres.rst  readthedocs.rst  slack.rst
docs/how_to/: index.rst  slack.rst
sirbot/: __init__.py  bot.py
sirbot/endpoints/: __init__.py
sirbot/plugins/apscheduler/: __init__.py  plugin.py
sirbot/plugins/github/: __init__.py  plugin.py
sirbot/plugins/postgres/: __init__.py  plugin.py
sirbot/plugins/readthedocs/: __init__.py  plugin.py
sirbot/plugins/slack/: __init__.py  endpoints.py  message.py  plugin.py
tests/: conftest.py  test.sh  test_plugin_apscheduler.py  test_plugin_github.py  test_plugin_postgres.py  test_plugin_readthedocs.py  test_plugin_slack.py  test_sirbot.py
tests/data/github/events/: issue_closed.headers.json  issue_closed.json  pr_merged.headers.json  pr_merged.json
tests/data/sql/: 0.0.2.sql  0.1.12.sql  0.1.9.sql  init.sql
