[tool.poetry]
name = "sirbot"
version = "0.1.1"
description = "The good Sir Bot-a-lot. An asynchronous python bot framework."
authors = ["Ovv <contact@ovv.wtf>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.4"
aiofiles = "^0.4.0"
asyncpg = "^0.18.2"
asyncio-contextmanager = "^1.0"
slack-sansio = "^1.0.0"
gidgethub = "^3.0"
ujson = "^1.35"
apscheduler = "^3.5"

[tool.poetry.dev-dependencies]
tox = "^3.5"
sphinx = "^1.8"
sphinxcontrib-asyncio = "^0.2.0"
flake8 = "^3.6"
black = "^18.3-alpha.0"
isort = "^4.3"
pytest = "^4.0"
coverage = "^4.5"
pytest-coverage = "^0.0.0"
pytest-asyncio = "^0.10.0"
pytest-aiohttp = "^0.3.0"
asynctest = "^0.12.2"
sphinxcontrib-napoleon = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
